Bug/1682 Wrong font (#1688)
* fix: Change naming and letter spacing #1682

* fix: Change button to bold #1682

--- a/frontend/src/style/styles.scss
+++ b/frontend/src/style/styles.scss
@@ -76,6 +76,7 @@ body.okr {
 
 * {
   font-family: Roboto, sans-serif;
+  letter-spacing: normal;
   font-variation-settings: 'wght' 400;
   line-height: 115% !important;
 }
